# blip

./: Cargo.toml  README.md
src/: cli.rs  main.rs  templates.rs
templates/: markup.txt  scripts.txt  styles.txt  vue.txt
test/: index.vue
